welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:4: error: illegal start of simple expression
  var max2 = 
  ^