welcome.lessons.welcome.array.search.SecondMaxValue.scala.code
def max2Value(nums:Array[Int]): Int = {
  var L = nums.length
  var max1 = 
  var max2 = 
  for (i <- 0 to L-1){
    if (max1 <= nums(i)){max1 = nums(i)}
    else if (max2 < max1 && max2 <= nums(i)){
      max2 = nums(i)
    }
    
  }
  return max2
}